# pylego

./: .gitignore  README.md  go.mod  go.sum  pylego.go  pylego.py  pyproject.toml  setup.py
src/lepy/: __init__.py  go.mod  lego-stub.go  lepy.py
tests/unit/: test_pylego.py
