[project]
name = "lepy"
version = "0.1.1"
authors = [
  { name="Ghislain Bourgeois", email="ghislain.bourgeois@canonical.com" },
  { name="Kayra Gemalmaz", email="kayra.gemalmaz@canonical.com" },
]
description = "A python package for the lego application written in Golang"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/kayra1/lepy"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
lepy = ["lego.so"]

# Linting tools configuration
[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "C", "N", "D", "I001"]
extend-ignore = [
    "D203",
    "D204",
    "D213",
    "D215",
    "D400",
    "D404",
    "D406",
    "D407",
    "D408",
    "D409",
    "D413",
]
ignore = ["E501", "D107"]
per-file-ignores = {"tests/*" = ["D100","D101","D102","D103","D104"]}

[tool.ruff.lint.mccabe]
max-complexity = 10